changes to the navbar, alignment fixes, ideas

--- a/main.sass
+++ b/main.sass
@@ -1,5 +1,4 @@
 $red: #E94333
-$blue: #005BA6
 $white: #F2F0ED
 $font: helvetica, sans-serif
 $slab: roboto-slab, serif
@@ -104,6 +103,7 @@ body
                     font-size: 5vh
                     cursor: pointer
                     transition: 200ms
+                    transform: translate(-1vw)
 
                     &:hover
                          text-shadow: 5px 5px 0px darken($red, 20%)
